--- a/serverless.yml
+++ b/serverless.yml
@@ -14,6 +14,10 @@ plugins:
   # to run the serverless app locally 
   - serverless-dynamodb-local
   - serverless-offline 
+  # to run the canary deployment.
+  # Canary deployment is a kind of deployment where we are dividing the application into 2 sides.
+  # one half for beta testing and we provide the same to a small amount of customers
+  - serverless-plugin-canary-deployments
   
 
 provider:
@@ -35,9 +39,11 @@ provider:
     # the below code is for the secret though the secret manager
     # AUTH_0_SECRET_ID: Auth0Secret-${self:provider.stage}
     # AUTH_0_SECRET_FIELD: auth0Secret
+
     # adding a variable IS_OFFLINE, so that we know tht whether we running the server locally or not, 
     # if the value is true, then we are going to crete the dynamo db instance locally, else it wll not be a local instance
-    IS_OFFLINE: true
+    IS_OFFLINE: false
+
   iamRoleStatements:
     - Effect: Allow
       Action:
@@ -82,6 +88,13 @@ provider:
     #   Action: 
     #     - kms:Decrypt
     #   Resource: !GetAtt KMSKey.Arn 
+    # the below permission is for the code deployment as part of canary deployment
+    - Effect: Allow
+      Action: 
+        - codedeploy:*
+      Resource:
+        - '*'
+        
 
 
 custom:
@@ -127,6 +140,7 @@ functions:
           method: get
           path: Groups
           cors: true
+     
         
   CreateGroup:
     handler: src/lambda/http/createGroups.handler
@@ -142,7 +156,11 @@ functions:
             description: Create a new group
             requestModels:
               'application/json': GroupRequest
-    
+    # adding configuration setting for canary deployment
+    deploymentSettings:
+      type: Linear10PercentEvery1Minute
+      alias: Live
+
   GetImages:
     handler: src/lambda/http/getImages.handler
     events:
