--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
+    "aws-xray-sdk": "^3.0.1",
     "jimp": "^0.10.3",
     "jsonwebtoken": "^8.5.1",
     "serverless-dynamodb-local": "^0.2.30",
@@ -18,6 +19,7 @@
     "aws-sdk": "^2.670.0",
     "fork-ts-checker-webpack-plugin": "^3.0.1",
     "serverless-aws-documentation": "^1.1.0",
+    "serverless-iam-roles-per-function": "^2.0.2",
     "serverless-offline": "^6.1.5",
     "serverless-plugin-canary-deployments": "^0.4.8",
     "serverless-reqvalidator-plugin": "^1.0.3",
